--- a/app/templates/create_patients.html
+++ b/app/templates/create_patients.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 class="subtitle is-2">Registrar Paciente</h2>
+<h2 class="subtitle is-2">Registrar patient</h2>
 <form method="post">
     <div class="field">
         <label for="name">Nombres:</label>
@@ -10,15 +10,15 @@
         </div>
     </div>
     <div class="field">
-        <label for="species">Apellidos:</label>
+        <label for="lastname">Apellidos:</label>
         <div class="control">
-            <input type="text" id="species" name="species" required class="input">
+            <input type="text" id="lastname" name="lastname" required class="input">
         </div>
     </div>
     <div class="field">
-        <label for="age">CI:</label>
+        <label for="ci">CI:</label>
         <div class="control">
-            <input type="number" id="age" name="age" required class="input">
+            <input type="number" id="ci" name="ci" required class="input">
         </div>
     </div>
     <div class="field">
