--- a/app/templates/patients.html
+++ b/app/templates/patients.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 class="subtitle is-2">Lista de Pacientes</h2>
+<h2 class="subtitle is-2">Lista de patients</h2>
     <div class="columns is-multiline">
         {% for patient in patients %}
             <div class="column is-one-third">
@@ -9,7 +9,7 @@
                     <div class="card-content">
                         <div class="content">
                             <p><strong>Nombre: {{ patient.name }} </strong></p>
-                            <p><strong>Apellidos: {{ patient.last_name }}</strong></p>
+                            <p><strong>Apellidos: {{ patient.lastname }}</strong></p>
                             <p><strong>CI: {{ patient.ci }}</strong></p>
                             <p><strong>Fecha de Nacimiento: {{ patient.birth_date }}</strong></p>
                             <div class="buttons">
