--- a/app/templates/update_patient.html
+++ b/app/templates/update_patient.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 class="subtitle is-2">Editar Paciente</h2>
+<h2 class="subtitle is-2">Editar patient</h2>
 <form method="post">
     <div class="field">
         <label for="name">Nombres:</label>
@@ -10,9 +10,9 @@
         </div>
     </div>
     <div class="field">
-        <label for="species">Apellidos:</label>
+        <label for="lastname">Apellidos:</label>
         <div class="control">
-            <input type="text" id="species" name="species" required class="input" value={{ patient.last_name }}>
+            <input type="text" id="lastname" name="lastname" required class="input" value={{ patient.lastname }}>
         </div>
     </div>
     <div class="field">
